refactor(storage): introduce domain StorageException hierarchy and OciStorageExceptionMapper